Fixed placement of the Legend component in main view, it overlapped with zoom buttons.

--- a/frontend/src/components/Legend.css
+++ b/frontend/src/components/Legend.css
@@ -1,7 +1,7 @@
 .legend {
   position: absolute;
   left: 2vw;
-  bottom: 6vh;
+  top: calc(var(--topbar-height) + 64px);
   display: flex;
   flex-direction: column;
   gap: var(--padding-sm);
